// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default default: default 1`] = `

import { FormattedMessage } from 'react-intl';

<FormattedMessage defaultMessage="hello" />;

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedMessage } from 'react-intl';
<FormattedMessage id="src.__fixtures__.4091689770" defaultMessage="hello" />;

`;

exports[`default import all supported components: import all supported components 1`] = `

import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';

<FormattedHTMLMessage defaultMessage="<span>hello</span>" />;
<FormattedMessage defaultMessage="hello" />;

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
<FormattedHTMLMessage id="src.__fixtures__.2073708487" defaultMessage="<span>hello</span>" />;
<FormattedMessage id="src.__fixtures__.4091689770" defaultMessage="hello" />;

`;

exports[`default multiple uses: multiple uses 1`] = `

import { FormattedMessage } from 'react-intl';

<FormattedMessage defaultMessage="hello" />;
<FormattedMessage defaultMessage="another" />;

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedMessage } from 'react-intl';
<FormattedMessage id="src.__fixtures__.4091689770" defaultMessage="hello" />;
<FormattedMessage id="src.__fixtures__.3885521902" defaultMessage="another" />;

`;

exports[`default using key: using key 1`] = `

import { FormattedMessage } from 'react-intl';

<FormattedMessage key="foobar" defaultMessage="hello" />;

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedMessage } from 'react-intl';
<FormattedMessage key="foobar" id="src.__fixtures__.4091689770" defaultMessage="hello" />;

`;

exports[`default with FormattedMessage imported as something else: with FormattedMessage imported as something else 1`] = `

import { FormattedMessage as T } from 'react-intl';

<T defaultMessage="hello" />;

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedMessage as T } from 'react-intl';
<T id="src.__fixtures__.4091689770" defaultMessage="hello" />;

`;

exports[`default with FormattedMessage nested in other JSX: with FormattedMessage nested in other JSX 1`] = `

import { FormattedMessage } from 'react-intl';

<div>
  <FormattedMessage defaultMessage="hello" />
</div>

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedMessage } from 'react-intl';
<div>
  <FormattedMessage id="src.__fixtures__.4091689770" defaultMessage="hello" />
</div>;

`;

exports[`default with a value interpolated in the message: with a value interpolated in the message 1`] = `

import { FormattedMessage } from 'react-intl';

<FormattedMessage defaultMessage={\`hello world 2\`} />;

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedMessage } from 'react-intl';
<FormattedMessage id="src.__fixtures__.1190636703" defaultMessage={\`hello world 2\`} />;

`;

exports[`default with a variable as the defaultMessage: with a variable as the defaultMessage 1`] = `

import { FormattedMessage } from 'react-intl';

const message = "variable message";

<FormattedMessage defaultMessage={message} />;

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedMessage } from 'react-intl';
const message = "variable message";
<FormattedMessage id="src.__fixtures__.1407092463" defaultMessage={message} />;

`;

exports[`extractComments = false default: default 1`] = `

import { FormattedMessage } from 'react-intl';

<FormattedMessage defaultMessage="hello" />;

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedMessage } from 'react-intl';
<FormattedMessage id="src.__fixtures__.4091689770" defaultMessage="hello" />;

`;

exports[`filebase = true default: default 1`] = `

import { FormattedMessage } from 'react-intl';

<FormattedMessage defaultMessage="hello" />;

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedMessage } from 'react-intl';
<FormattedMessage id="src.__fixtures__.messages.4091689770" defaultMessage="hello" />;

`;

exports[`includeExportName = all default: default 1`] = `

import { FormattedMessage } from 'react-intl';

<FormattedMessage defaultMessage="hello" />;

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedMessage } from 'react-intl';
<FormattedMessage id="src.__fixtures__.4091689770" defaultMessage="hello" />;

`;

exports[`includeExportName = true default: default 1`] = `

import { FormattedMessage } from 'react-intl';

<FormattedMessage defaultMessage="hello" />;

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedMessage } from 'react-intl';
<FormattedMessage id="src.__fixtures__.4091689770" defaultMessage="hello" />;

`;

exports[`removePrefix = "src" default: default 1`] = `

import { FormattedMessage } from 'react-intl';

<FormattedMessage defaultMessage="hello" />;

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedMessage } from 'react-intl';
<FormattedMessage id="__fixtures__.4091689770" defaultMessage="hello" />;

`;

exports[`removePrefix = "src.__fixtures__" default: default 1`] = `

import { FormattedMessage } from 'react-intl';

<FormattedMessage defaultMessage="hello" />;

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedMessage } from 'react-intl';
<FormattedMessage id="4091689770" defaultMessage="hello" />;

`;

exports[`removePrefix = "src/" -- with slash default: default 1`] = `

import { FormattedMessage } from 'react-intl';

<FormattedMessage defaultMessage="hello" />;

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedMessage } from 'react-intl';
<FormattedMessage id="__fixtures__.4091689770" defaultMessage="hello" />;

`;

exports[`removePrefix = /__fixtures__/ default: default 1`] = `

import { FormattedMessage } from 'react-intl';

<FormattedMessage defaultMessage="hello" />;

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedMessage } from 'react-intl';
<FormattedMessage id="src.4091689770" defaultMessage="hello" />;

`;

exports[`removePrefix = false default: default 1`] = `

import { FormattedMessage } from 'react-intl';

<FormattedMessage defaultMessage="hello" />;

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedMessage } from 'react-intl';
<FormattedMessage id="src.__fixtures__.4091689770" defaultMessage="hello" />;

`;

exports[`removePrefix = true, includeExportName = all default: default 1`] = `

import { FormattedMessage } from 'react-intl';

<FormattedMessage defaultMessage="hello" />;

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedMessage } from 'react-intl';
<FormattedMessage id="4091689770" defaultMessage="hello" />;

`;

exports[`removePrefix = true, includeExportName = true default: default 1`] = `

import { FormattedMessage } from 'react-intl';

<FormattedMessage defaultMessage="hello" />;

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedMessage } from 'react-intl';
<FormattedMessage id="4091689770" defaultMessage="hello" />;

`;

exports[`useKey = true default: default 1`] = `

import { FormattedMessage } from 'react-intl';

<FormattedMessage defaultMessage="hello" />;

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedMessage } from 'react-intl';
<FormattedMessage id="src.__fixtures__.4091689770" defaultMessage="hello" />;

`;

exports[`useKey = true using key: using key 1`] = `

import { FormattedMessage } from 'react-intl';

<FormattedMessage key="foobar" defaultMessage="hello" />;

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedMessage } from 'react-intl';
<FormattedMessage key="foobar" id="src.__fixtures__.foobar" defaultMessage="hello" />;

`;
